--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "boiler plate for react express",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client": "npm start --prefix client"
   },
   "author": "JakeSiewJK64",
   "license": "MIT",
