--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "concurrently": "^6.4.0",
     "express": "^4.17.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "cors": "^2.8.5",
