--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^6.4.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
+    "react": "^17.0.2",
     "react-scripts": "^4.0.3"
   },
   "devDependencies": {
