--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "concurrently": "^6.4.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
