--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "boiler plate for react express",
   "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    // "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix client"
