--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "server": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "npm start --prefix client"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "JakeSiewJK64",
   "license": "MIT",
