--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "boiler plate for react express",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "start": "node server.js"
   },
   "author": "JakeSiewJK64",
   "license": "MIT",
