--- a/package.json
+++ b/package.json
@@ -9,14 +9,10 @@
   "author": "JakeSiewJK64",
   "license": "MIT",
   "dependencies": {
-    "concurrently": "^6.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.1",
-    "pg": "^8.7.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "^4.0.3"
+    "pg": "^7.18.2"
   },
   "devDependencies": {
     "cors": "^2.8.5",
