--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "boiler plate for react express",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "npm i && node server.js"
   },
   "author": "JakeSiewJK64",
   "license": "MIT",
