--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "boiler plate for react express",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"npm i && node server.js\"  \"npm run client\"",
-    "client": "cd client && npm install && npm run build"
+    "start": "concurrently \"npm i && node server.js\"",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "JakeSiewJK64",
   "license": "MIT",
