--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "cors": "^2.8.5",
