--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.12.3",
     "@material/button": "^13.0.0",
     "@material/ripple": "^13.0.0",
+    "@react-css/flex": "^1.6.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
